# tactile-drone-offboard

./: .gitignore  .gitmodules
plotting/: angle_annotation.py  plot_angle_validation.py  plot_multi_traj_gt.py  plot_pos_vs_ref.py  plotting_settings.py  robot.py
plotting/evaluate_error/: angled_away.py  angled_towards.py  bigger_angled_away.py  bigger_angled_towards.py  even_bigger_angled_away.py  straight_wall.py  superimposed.py  wavy_wall.py
plotting/evaluate_force_orientation/: angled_away.py  angled_towards.py  bigger_angled_away.py  bigger_angled_towards.py  even_bigger_angled_away.py  straight_wall.py  superimposed.py  wavy_wall.py
plotting/plot_multi_traj/: 3d_traj.py  angled_away.py  angled_towards.py  bigger_angled_away.py  bigger_angled_towards.py  even_bigger_angled_away.py  straight_wall.py  wavy_wall.py
plotting/plot_pos_vs_ref/: angled_away.py  angled_towards.py  bigger_angled_towards.py  failure_mode.py  straight_wall.py  superimposed.py  wavy_wall.py
ws/src/am_vis/: CMakeLists.txt  package.xml
ws/src/am_vis/launch/: am_vis.launch.py  am_vis_joint_pub.launch.py
ws/src/am_vis/rviz/: rviz_basic_settings.rviz
ws/src/am_vis/src/: base_fake_pose_publisher.cpp  base_tf_broadcaster.cpp  px4_topic_transformer.cpp  wrench_transformer.cpp
ws/src/am_vis/urdf/: am.urdf  tendon_driven_finger.urdf  wall.urdf
ws/src/common/: CMakeLists.txt  package.xml
ws/src/common/include/common/: common.hpp  constants.hpp
ws/src/common/src/: common.cpp
ws/src/tendon_driven_finger/: CMakeLists.txt  package.xml
ws/src/tendon_driven_finger/src/: base_tf_broadcaster.cpp
(+5 files in other folders)
